Unify response with simple message
