# api/proxy-api-server/docs/swagger.json
@@ -21,7 +21,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.StatusResponse"
+                            "$ref": "#/definitions/internal_handlers.MessageResponse"
                         }
                     }
                 }
@@ -127,10 +127,10 @@
         }
     },
     "definitions": {
-        "internal_handlers.StatusResponse": {
+        "internal_handlers.MessageResponse": {
             "type": "object",
             "properties": {
-                "status": {
+                "message": {
                     "type": "string"
                 }
             }
